--- a/src/app/post-details/post-details.component.html
+++ b/src/app/post-details/post-details.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" *ngIf='post'>
 
   <!-- Blog Post Content Column -->
   <div class="col-lg-8">
@@ -6,11 +6,11 @@
     <!-- Blog Post -->
 
     <!-- Title -->
-    <h1>Blog Post Title</h1>
+    <h1>{{ postTitle }}</h1>
 
     <!-- Author -->
     <p class="lead">
-      by <a href="#">Start Bootstrap</a>
+      by <a href="#">{{ post.username }}</a>
     </p>
 
     <hr>
@@ -26,16 +26,7 @@
     <hr>
 
     <!-- Post Content -->
-    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe
-      quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum
-      obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur
-      neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt
-      tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione
-      tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
+    <p class="lead">{{ post.text }}</p>
 
     <hr>
 
