--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -11,7 +11,7 @@
     <!-- First Blog Post -->
     <div *ngFor='let post of posts'>
       <h2>
-        <a [routerLink]="['/PostDetails', post.id]">{{post.title}}</a>
+        <a [routerLink]="['/PostDetails', post.id, post.username]">{{post.title}}</a>
       </h2>
       <p class="lead">
         by: <a [routerLink]="[  ]"> {{post.username}}</a>
@@ -21,7 +21,7 @@
       <img class="img-responsive" src="http://placehold.it/900x300" alt="">
       <hr>
       <p>{{post.text}}.</p>
-      <a class="btn btn-primary" [routerLink]="['/PostDetails', post.id]">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+      <a class="btn btn-primary" [routerLink]="['/PostDetails', post.id, post.username]">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
       <hr>
     </div>
