Added Summernote 0.8.2 to Ng2 project with Jquery workaround and [innerHTML]
Fix write post with Summernote

Added a pipe to filter out possible JS inject

By poass Ng 2 html cleaner that remove style

Addded replis compo

--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -2,7 +2,6 @@
 
   <!-- Blog Entries Column -->
   <div class="col-md-8">
-
     <h1 class="page-header">
       Posts
       <small>Secondary Text</small>
@@ -14,13 +13,13 @@
         <a [routerLink]="['/PostDetails', post.id, post.username]">{{post.title}}</a>
       </h2>
       <p class="lead">
-        by: <a [routerLink]="[  ]"> {{post.username}}</a>
+        by: <a [routerLink]="['/PostDetails', post.id, post.username]"> {{post.username}}</a>
       </p>
       <p><span class="glyphicon glyphicon-time"></span> Posted on: {{post.createdDate}}</p>
       <hr>
-      <img class="img-responsive" src="http://placehold.it/900x300" alt="">
-      <hr>
-      <p>{{post.text}}.</p>
+      <!--<p>{{post.text}}.</p>-->
+      <p [innerHTML]="post.text | escapeHtml"></p>
+      <hr>      
       <a class="btn btn-primary" [routerLink]="['/PostDetails', post.id, post.username]">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
       <hr>
