--- a/src/app/post-details/post-details.component.html
+++ b/src/app/post-details/post-details.component.html
@@ -21,15 +21,8 @@
     <p><span class="glyphicon glyphicon-time"></span> Posted on August 24, 2013 at 9:00 PM</p>
 
     <hr>
-
-    <!-- Preview Image -->
-    <img class="img-responsive" src="http://placehold.it/900x300" alt="">
-
-    <hr>
-
     <!-- Post Content -->
-    <p class="lead">{{ post.text }}</p>
-
+    <p [innerHTML]="post.text | escapeHtml"></p>
     <hr>
 
     <!-- Blog Comments -->
