--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -13,7 +13,7 @@
         <a [routerLink]="['/PostDetails', post.id, post.username]">{{post.title}}</a>
       </h2>
       <p class="lead">
-        by: <a [routerLink]="['/PostDetails', post.id, post.username]"> {{post.username}}</a>
+        by: <a [routerLink]="['/PostDetails', post.id, post.username]"> {{post.username}}</a> <span>, location: {{post.location}} </span>
       </p>
       <p><span class="glyphicon glyphicon-time"></span> Posted on: {{post.createdDate}}</p>
       <hr>
